objects/vlocity_ins__FormularyTier__c.object
<CustomObject>
    <description>Categorization of formulary drugs into cost based tiers. A typical drug benefit includes three or four tiers: Tier 1 usually includes generic medications. Tier 2 usually includes preferred brand name medications. Tier 3 usually includes non-preferred brand name medications.</description>
    <fields>
        <fullName>vlocity_ins__CoPayAmount__c</fullName>
        <description>The standard copay amount applied for all drugs in this tier.</description>
        <inlineHelpText>The standard copay amount applied for all drugs in this tier.</inlineHelpText>
        <label>CoPay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoPayPercent__c</fullName>
        <description>The standard copay percentage applied for all drugs in this tier.</description>
        <inlineHelpText>The standard copay percentage applied for all drugs in this tier.</inlineHelpText>
        <label>CoPay %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>The long description related to the Formulary Tier.</description>
        <inlineHelpText>The long description related to the Formulary Tier.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if the Formulary Tier is currently Active.</description>
        <inlineHelpText>Designates if the Formulary Tier is currently Active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Formulary Tier</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <columns>vlocity_ins__CoPayPercent__c</columns>
        <columns>vlocity_ins__CoPayAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>